# trolly

./: .gitignore  Package.swift  bundle.sh
Trolly/App/: AppState.swift  TrollyApp.swift
Trolly/Domain/Errors/: TrollyError.swift
Trolly/Domain/Models/: CaptureSource.swift  CursorTrackerSettings.swift  RecordingConfiguration.swift  RecordingMetadata.swift  RecordingState.swift  Script.swift  TeleprompterSettings.swift  Transcript.swift  VideoPlayerSettings.swift  WebcamOverlaySettings.swift
Trolly/Extensions/: CGImage+Extensions.swift  CMSampleBuffer+Extensions.swift
TrollyTests/Domain/: CaptureSourceTests.swift  CursorTrackerSettingsTests.swift  RecordingConfigurationTests.swift  RecordingStateTests.swift  ScriptTests.swift  TeleprompterSettingsTests.swift  VideoPlayerSettingsTests.swift  WebcamOverlaySettingsTests.swift
TrollyTests/Services/: PermissionManagerTests.swift  RecordingCoordinatorSourceSwitchTests.swift  RecordingCoordinatorTests.swift  RecordingStorageRepositoryTests.swift  ScriptStorageServiceTests.swift  SettingsStoreTests.swift  TranscriptStorageServiceTests.swift  TranscriptionServiceTests.swift  VideoWriterTests.swift
TrollyTests/ViewModels/: CapturePreviewViewModelTests.swift  RecordingViewModelTests.swift  SourceSelectionViewModelTests.swift
transcription-server/: pyproject.toml  start.sh
transcription-server/src/: config.py  main.py
transcription-server/src/models/: transcript.py
transcription-server/src/providers/: base.py  openai_provider.py
transcription-server/src/routers/: transcribe.py
(+52 files in other folders)
